deploy/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ${DEMO_APP_NAMESPACE}
  labels:
    app: avatar-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avatar-api
  template:
    metadata:
      labels:
        app: avatar-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: demo-app
                operator: In
                values:
                - "true"
      containers:
        - name: avatar-api
          image: ${API_IMG_URI}:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              port: 5000
              path: '/ready'
---
apiVersion: v1
kind: Service
metadata:
  name: avatar-api
  namespace: ${DEMO_APP_NAMESPACE}
spec:
  selector:
    app: avatar-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
