deploy/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: ${DEMO_APP_NAMESPACE}
  labels:
    app: avatar-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avatar-web
  template:
    metadata:
      labels:
        app: avatar-web
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: demo-app
                operator: In
                values:
                - "true"
      containers:
        - name: avatar-web
          image: ${WEB_IMG_URI}:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: avatar-web
  namespace: ${DEMO_APP_NAMESPACE}
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5173
      protocol: TCP
      name: http
  selector:
    app: avatar-web
